--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
     <color name="grey">#AAAAAA</color>
     <color name="greyb">#E6AAAAAA</color>
     <color name="grey2">#AEAEAE</color>
+    <color name="gray">#F1F1F1</color>
     <color name="grey3">#6C6C6C</color>
     <color name="grey4">#505050</color>
     <color name="greyoscuro">#323232</color>
