--- a/app/src/main/res/layout/activity_escaneartienda.xml
+++ b/app/src/main/res/layout/activity_escaneartienda.xml
@@ -4,41 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.EscanearTiendaActivity"
-    android:background="@color/colorAccent">
+    tools:context=".ui.EscanearTiendaActivity">
 
     <TextView
         android:id="@+id/tvSCentro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="30dp"
         android:text="@string/centro"
-        android:textSize="38sp"
-        android:textStyle="bold"
-        android:textColor="?attr/colorPrimary"
         android:textAlignment="textStart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/layouts1"
+        app:layout_constraintStart_toStartOf="@+id/layouts1"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/layouts1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="35dp"
+        android:background="@drawable/border_rounder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSCentro"
-        android:background="@drawable/border_spiner">
-    <Spinner
-        android:id="@+id/spinerCentro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="textStart"
-        android:padding="7dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tvSCentro">
+
+        <Spinner
+            android:id="@+id/spinerCentro"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:padding="7dp"
+            android:textAlignment="textStart"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
@@ -46,34 +48,37 @@
         android:id="@+id/tvSModelo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
 
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="30dp"
         android:text="@string/modelo"
-        android:textSize="38sp"
-        android:textStyle="bold"
-        android:textColor="?attr/colorPrimary"
         android:textAlignment="textStart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layouts1"/>
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/layouts2"
+        app:layout_constraintStart_toStartOf="@+id/layouts2"
+        app:layout_constraintTop_toBottomOf="@id/layouts1" />
+
     <LinearLayout
         android:id="@+id/layouts2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="35dp"
+        android:background="@drawable/border_rounder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSModelo"
-        android:background="@drawable/border_spiner">
-    <Spinner
-        android:id="@+id/spinerModeloEtq"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="7dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tvSModelo">
+
+        <Spinner
+            android:id="@+id/spinerModeloEtq"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:padding="7dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
@@ -82,21 +87,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/border_redondos"
-        android:padding="8dp"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:text="comenzar"
-        android:textColor="@color/white"
-        android:textAlignment="textStart"
-        android:textSize="23sp"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="8dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="@string/comenzar"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layouts2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
