--- a/app/src/main/res/layout/activity_procesoporlotes.xml
+++ b/app/src/main/res/layout/activity_procesoporlotes.xml
@@ -103,6 +103,7 @@
         android:text="@string/descargar_inventarios"
         android:textColor="@color/white"
         android:textSize="23sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/layoutversionmenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
