--- a/app/src/main/res/layout/card_etqs.xml
+++ b/app/src/main/res/layout/card_etqs.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="12dp"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
@@ -62,6 +63,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintStart_toEndOf="@+id/edtretcajas"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
@@ -76,6 +78,7 @@
         android:layout_marginEnd="36dp"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/edtubiitem"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
@@ -89,6 +92,7 @@
         android:layout_marginEnd="24dp"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
@@ -102,6 +106,7 @@
         android:layout_marginTop="12dp"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:imeOptions="actionNext"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         android:textColor="#303030"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +121,7 @@
         android:layout_marginTop="12dp"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:imeOptions="actionNext"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         android:textColor="#303030"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +149,7 @@
         android:layout_marginEnd="24dp"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toStartOf="@+id/edtdesasigetq"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
@@ -155,6 +162,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="@+id/space3"
         app:layout_constraintTop_toBottomOf="@+id/textView19"
@@ -168,6 +176,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20"
