--- a/app/src/main/res/layout/card_items.xml
+++ b/app/src/main/res/layout/card_items.xml
@@ -109,6 +109,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="20dp"
         android:inputType="text"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -125,6 +126,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -141,6 +143,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         android:inputType="number"
+        android:imeOptions="actionNext"
         android:textColor="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.24"
